--- a/app/src/main/res/layout/activity_notification_test.xml
+++ b/app/src/main/res/layout/activity_notification_test.xml
@@ -10,18 +10,18 @@
         android:id="@+id/notifitextView22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/notifibutton22"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
         android:layout_marginEnd="185dp"
-        android:layout_marginBottom="299dp"
+        android:layout_marginTop="10dp"
         android:text="TextView"/>
     <Button
         android:id="@+id/notifibutton22"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/notifitextView22"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginEnd="179dp"
-        android:layout_marginBottom="257dp"
+        android:layout_marginTop="10dp"
         android:text="button"/>
 </RelativeLayout>
