--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -27,7 +27,7 @@
         android:layout_alignTop="@id/WorkTime"
         android:layout_marginTop="50dp"
         android:fontFamily="sans-serif-medium"
-        android:text="0:00"
+        android:text="@string/default_time"
         android:textSize="20sp"
         android:typeface="normal" />
 
@@ -35,11 +35,9 @@
         android:id="@+id/BreakTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignTop="@id/WorkTime"
         android:layout_marginTop="120dp"
         android:layout_alignStart="@id/WorkTime"
-        android:layout_marginStart="50dp"
         android:fontFamily="sans-serif-medium"
         android:text="@string/break_time"
         android:textSize="23sp"
@@ -49,11 +47,11 @@
         android:id="@+id/BreakCountDown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/BreakTime"
         android:layout_alignStart="@id/BreakTime"
+        android:layout_alignTop="@id/BreakTime"
         android:layout_marginTop="50dp"
         android:fontFamily="sans-serif-medium"
-        android:text="0:00"
+        android:text="@string/default_time"
         android:textSize="20sp"
         android:typeface="normal" />
 
@@ -61,9 +59,11 @@
         android:id="@+id/PomoStartPause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@id/PomoCountDown"
+        android:layout_alignParentEnd="true"
         android:layout_alignBaseline="@id/PomoCountDown"
+        android:layout_marginEnd="50dp"
         android:layout_marginStart="140dp"
+        android:contentDescription="@string/work_speakable"
         android:onClick="PomoStartPauseClicked"
         android:text="@string/start" />
 
@@ -71,8 +71,9 @@
         android:id="@+id/BreakStartPause"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/PomoStartPause"
+        android:layout_alignEnd="@+id/PomoStartPause"
         android:layout_alignBaseline="@id/BreakCountDown"
+        android:contentDescription="@string/break_speakable"
         android:onClick="BreakStartPauseClicked"
         android:text="@string/start" />
 
@@ -80,33 +81,14 @@
         android:id="@+id/SetTimeBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="150dp"
-        android:layout_marginStart="30dp"
+        android:layout_alignTop="@id/BreakCountDown"
+        android:layout_alignStart="@id/BreakCountDown"
+        android:layout_marginTop="100dp"
         android:onClick="DialogOpener"
         android:text="@string/set_time" />
 
-    <Button
-        android:id="@+id/BackBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/SetTimeBtn"
-        android:layout_centerHorizontal="true"
-        android:onClick="Back"
-        android:text="@string/back" />
-
-    <Button
-        android:id="@+id/SettingsBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@id/BackBtn"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="30dp"
-        android:onClick="settings"
-        android:text="@string/settings" />
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/notesFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -114,8 +96,23 @@
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
         android:clickable="true"
-        android:onClick="notes"
+        android:contentDescription="@string/notes_fab_speakable"
         android:focusable="true"
+        android:onClick="notes"
         app:srcCompat="@android:drawable/ic_input_get" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/settingsFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="30dp"
+        android:layout_alignBottom="@id/notesFAB"
+        android:layout_marginBottom="80dp"
+        android:clickable="true"
+        android:contentDescription="@string/settings"
+        android:focusable="true"
+        android:onClick="settings"
+        app:srcCompat="@drawable/baseline_settings_24" />
 
 </RelativeLayout>
