--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -6,98 +6,146 @@
     android:layout_height="match_parent"
     tools:context=".Notes">
 
-    <TextView
-        android:id="@+id/notesHeader"
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="30dp"
-        android:text="@string/notes"
-        android:textSize="23sp"
-        android:textStyle="bold" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="15dp"
+        android:onClick="Testi"
+        android:text="Button"
+        android:visibility="visible" />
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/notesSearchLayout"
+    <RelativeLayout
+        android:id="@+id/WriteLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="50dp"
-        android:layout_below="@+id/notesHeader"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
-        <ImageView
+        <TextView
+            android:id="@+id/notesHeader2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/search_icon_description"
-            android:src="@drawable/baseline_search_24"/>
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/notes"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
         <EditText
+            android:id="@+id/editTextTextMultiLine"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginStart="2dp"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/notesHeader2"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="49dp"
             android:background="@null"
-            android:hint="@string/search_notes_hint"
-            android:importantForAutofill="no"
-            android:inputType="text" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+            android:gravity="start|top"
+            android:hint="@string/notes_hint"
+            android:inputType="textMultiLine"
+            android:visibility="visible" />
+    </RelativeLayout>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <RelativeLayout
+        android:id="@+id/FileLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
-        android:layout_below="@+id/notesSearchLayout"
-        android:gravity="start|top"
-        android:background="@null">
+        android:visibility="visible">
 
-        <androidx.cardview.widget.CardView
+        <TextView
+            android:id="@+id/notesHeader"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="30dp"
+            android:text="@string/notes"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            android:visibility="visible" />
+
+        <RelativeLayout
+            android:id="@+id/ParentView"
+            android:layout_width="320dp"
+            android:layout_height="594dp"
+            android:layout_below="@+id/notesSearchLayout"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginBottom="30dp"
+            android:background="@null"
+            android:gravity="start|top"
+            android:visibility="visible">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/Card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:gravity="start|top"
+                android:visibility="gone"
+                app:cardCornerRadius="6dp">
+
+                <TextView
+                    android:id="@+id/note_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:text="Header" />
+
+                <TextView
+                    android:id="@+id/note_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="Content" />
+
+            </androidx.cardview.widget.CardView>
+
+        </RelativeLayout>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/notesSearchLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="start|top"
-            android:background="@null"
-            app:cardCornerRadius="6dp">
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginEnd="49dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:visibility="visible">
 
-            <TextView
-                android:id="@+id/note_header"
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:text="Header"/>
+                android:contentDescription="@string/search_icon_description"
+                android:src="@drawable/baseline_search_24" />
 
-            <TextView
-                android:id="@+id/note_content"
+            <EditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="20dp"
-                android:text="Content"/>
+                android:layout_height="48dp"
+                android:layout_marginStart="2dp"
+                android:background="@null"
+                android:hint="@string/search_notes_hint"
+                android:importantForAutofill="no"
+                android:inputType="text" />
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
-        </androidx.cardview.widget.CardView>
+    </RelativeLayout>
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <EditText
-        android:id="@+id/editTextTextMultiLine"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
-        android:layout_below="@+id/notesSearchLayout"
-        android:gravity="start|top"
-        android:background="@null"
-        android:hint="@string/notes_hint"
-        android:inputType="textMultiLine"
-        android:visibility="gone" />
 </RelativeLayout>
