--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -7,14 +7,13 @@
     tools:context=".Notes">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/NewCard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="15dp"
-        android:onClick="Testi"
         android:text="Button"
         android:visibility="visible" />
 
@@ -22,24 +21,14 @@
         android:id="@+id/WriteLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="invisible">
 
-        <TextView
-            android:id="@+id/notesHeader2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="30dp"
-            android:text="@string/notes"
-            android:textSize="23sp"
-            android:textStyle="bold"
-            android:visibility="visible" />
 
         <EditText
-            android:id="@+id/editTextTextMultiLine"
+            android:id="@+id/EditContext"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/notesHeader2"
+            android:layout_below="@+id/EditTitle"
             android:layout_marginStart="50dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="50dp"
@@ -49,13 +38,28 @@
             android:hint="@string/notes_hint"
             android:inputType="textMultiLine"
             android:visibility="visible" />
+
+        <EditText
+            android:id="@+id/EditTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="63dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="51dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="51dp"
+            android:ems="10"
+            android:hint="Name"
+            android:inputType="text" />
+
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/FileLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="invisible">
 
         <TextView
             android:id="@+id/notesHeader"
