--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="15dp"
         android:text="Button"
+        android:onClick="NewCard"
         android:visibility="visible" />
 
     <RelativeLayout
@@ -59,7 +60,7 @@
         android:id="@+id/FileLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="invisible">
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/notesHeader"
