--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -87,32 +87,15 @@
         android:onClick="DialogOpener"
         android:text="@string/set_time" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/notesFAB"
-        android:layout_width="wrap_content"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
-        android:clickable="true"
-        android:contentDescription="@string/notes_fab_speakable"
-        android:focusable="true"
-        android:onClick="notes"
-        app:srcCompat="@android:drawable/ic_input_get" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/settingsFAB"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="30dp"
-        android:layout_alignBottom="@id/notesFAB"
-        android:layout_marginBottom="80dp"
-        android:clickable="true"
-        android:contentDescription="@string/settings"
-        android:focusable="true"
-        android:onClick="settings"
-        app:srcCompat="@drawable/baseline_settings_24" />
+        app:backgroundTint="?attr/colorPrimary"
+        app:itemIconTint="?attr/colorOnPrimary"
+        app:itemIconSize="30dp"
+        app:itemTextColor="?attr/colorOnPrimary"
+        app:menu="@menu/bottom_navigation_menu" />
 
 </RelativeLayout>
